crates/cognicode-macros/tests/newtype-ui/newtype_on_enum.stderr
error: expected attribute, found derive macro `newtype`
 --> tests/newtype-ui/newtype_on_enum.rs
  |
  | #[newtype]
  |   ^^^^^^^ not an attribute
